--- a/front/app/package.json
+++ b/front/app/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
+    "lint:fix": "eslint --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
     "codegen": "graphql-codegen --config codegen.yml"
   },
